--- a/templates/index.html
+++ b/templates/index.html
@@ -9,23 +9,29 @@
     <title>EASY-REQUEST</title>
 </head>
 <body>
+    <!-- Navegação principal do site -->
     <nav>
         <div class="nav-img">
-            <img src="/static/IMG/Brand Identity and Design.svg" alt="">
+            <!-- Logo ou identidade visual da marca -->
+            <img src="/static/IMG/Brand Identity and Design.svg" alt="Logotipo do Easy-Request">
         </div>
     </nav>
     <main>
+        <!-- Container principal para o conteúdo da página -->
         <div class="container-abaixo">
             <div class="container__abaixo--conteudotxt">
+                <!-- Título e descrição da página -->
                 <h2>BEM-VINDO AO</h2>
                 <h2>EASY- <span class="container__abaixo--txtVazado">REQUEST</span></h2>
                 <h3 class="container__abaixo--descricao">Gerencie seus chamados de forma simples e rápida</h3>
             </div>
             <div class="container__abaixo--botoes">
-                <p>Você ja possui Cadastro?</p>
+                <!-- Mensagem para usuários existentes e novos -->
+                <p>Você já possui Cadastro?</p>
+                <!-- Botão para login -->
                 <a href="/RF002" class="botao botao-login">Entrar</a>
                 <p>ou</p>
-                
+                <!-- Botão para cadastro -->
                 <a href="/RF001" class="botao botao-cadastro">Cadastre-se</a>
             </div>
         </div>
