--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -37,15 +37,14 @@
         <main>
             <section class="container-main">
                 <form action="" method="POST">
-                    <select name="form_select-user" id="form_select-user">
-                        <img src="/" alt="Imagem de Perfil">
-                        <div class="select-user_info">
-                            <p>Pintor</p>
-                            <h2>Heitor Lima</h2>
-                        </div>
+
+                    <div value="form_select-user" id="form_select-user" name="form_select-user" data-name="Heitor Lima" data-cargo="Pintor">
+                        <figure><img src="/" alt="Imagem de Perfil"></figure>
+                        <div class="option">Heitor Lima <p>Pintor</p></div>
                         <p class="status_disponivel">Disponível</p>
                         <p class="status_n-disponivel">Não Disponível</p>
-                    </select>
+                    </div>
+
                 </form>
             </section>
         </main>        
