--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -19,10 +19,10 @@
     <body>
         <header>
             <section class="container-header">
-                <figure><img src="/" alt="Imagem de Perfil"></figure>
+                <figure><img src="https://pics.craiyon.com/2023-06-27/287f2a60c2e74386b5a89c517eb527dc.webp" alt="Imagem de Perfil"></figure>
                 <div class="container-header_user-info">
                     <h2 class="container-header_user-nome">Paulo de Oliveira</h2>
-                    <p class="container-header_user-cargo">Professor</p>
+                    <p class="container-header_user-cargo">Supervisor de Manutenção</p>
                 </div>
             </section>
             <section class="container-header-data">
