--- a/templates/RF003-solic.html
+++ b/templates/RF003-solic.html
@@ -43,28 +43,26 @@
                     <p class="subtitulo">Coloque as Informações sobre o Serviço...</p>
                 </div>
                 <div class="container-main_form">
-                    <form action="" method="POST">
-                        <div class="form_select">
-                            <select name="tipo-servico" id="tipo-servico">
-                                <option value="/">Tipo de Serviço</option>
-                            </select>
-                            <select name="bloco" id="bloco">
-                                <option value="/">Bloco</option>
-                            </select>
-                            <select name="sala" id="sala">
-                                <option value="/">Sala</option>
-                            </select>
-                        </div>
-                        <div class="form_input-arquivo">
-                            <label for="arquivo">Foto (Opcional):</label>
-                            <input type="file" name="arquivo" id="arquivo">
-                        </div>
-                        <div class="form_adendo">
-                            <label for="adendo">Adendo:</label>
-                            <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais..." maxlength="60">
-                        </div>
-                        <button type="submit" class="form_btn-enviar">Enviar Solicitação</button>
-                    </form>
+                    <div class="form_select">
+                        <select name="tipo-servico" id="tipo-servico">
+                            <option value="">Tipo de Serviço</option>
+                        </select>
+                        <select name="bloco" id="bloco">
+                            <option value="0">Blocos</option>
+                        </select>
+                        <select name="sala" id="sala">
+                            <option value="0">Sala</option>
+                        </select>
+                    </div>
+                    <div class="form_input-arquivo">
+                        <label for="arquivo">Foto (Opcional):</label>
+                        <input type="file" name="arquivo" id="arquivo">
+                    </div>
+                    <div class="form_adendo">
+                        <label for="adendo">Adendo:</label>
+                        <input type="text" id="adendo" name="adendo" placeholder="Digite informações adicionais..." maxlength="60">
+                    </div>
+                    <button type="submit" class="form_btn-enviar" onclick="fazerSolicitacao()">Enviar Solicitação</button>
                 </div>
             </section>
         </main>
