--- a/templates/RF002-log.html
+++ b/templates/RF002-log.html
@@ -22,9 +22,9 @@
                 <form action="/RF002" method="POST">
                     <h1>Login</h1>
                     <label for="inp-SN">SN:</label>
-                    <input placeholder="Digite seu SN" type="text" name="inp-SN" id="inp-SN">
+                    <input placeholder="Digite seu SN" type="text" name="inp-SN" id="inp-SN" required>
                     <label for="inp-senha">Senha:</label>
-                    <input placeholder="Digite sua senha" type="password" name="inp-senha" id="inp-senha">
+                    <input placeholder="Digite sua senha" type="password" name="inp-senha" id="inp-senha" required>
                     <button type="submit" class="container-form__btn-envio">Concluir Login</button>
                 </form>
             </div>
