--- a/static/CSS/RF002-log.css
+++ b/static/CSS/RF002-log.css
@@ -35,7 +35,7 @@ main{
     height: 40rem;
     border-radius: 5rem;
     position: absolute;
-    box-shadow:  5px 10px 18px black;
+    box-shadow:  5px 10px 18px var(--color02);
     
 }
 
