--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -1,4 +1,3 @@
-
 /* Estilo da Topo da Tela (nome do Usuario e data */
 header{
   width: 100vw;
@@ -78,8 +77,9 @@ nav button:hover{
 /* Estilo da Escolha de Funcionario */
 main{
   width: 100vw;
-  height: 84vh;
- 
+  height: 74vh;
+  overflow-x: auto;
+  position: relative;
 }
 
 .caixa-option {
@@ -122,6 +122,7 @@ main{
 
 .option.selected {
     border: 2px solid var(--color03);
+    box-shadow: none;
   }
 
 .status_disponivel{
@@ -137,4 +138,15 @@ main{
   border-radius: 0.5rem;
   font-size: 1.5rem;
   display: none;
+}
+
+/* Estilo da Escolha da urgencia/emergencia */
+
+.form_btn-emergencia{
+  width: 100vw;
+  height: 10vh;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
+  background-color: var(--color06);
 }
