--- a/static/CSS/RF008-fimchamado.css
+++ b/static/CSS/RF008-fimchamado.css
@@ -49,8 +49,39 @@ body{
 
 .conteudo-principal__subtitulo {
     font-size: 1.5rem;
+    margin-bottom: 1rem;
+}
+/* Estilos para a barra de filtro */
+.filtro {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin: 0.5rem 1rem;
 }
 
+.filtro__label {
+    font-size: 1.2rem;
+    color: var(--color02);
+    font-weight: bold;
+    text-align: left;
+}
+
+.filtro__select {
+    padding: 0.5rem;
+    border: 1px solid var(--color02);
+    border-radius: 0.5rem;
+    background-color: var(--color04);
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: var(--color06);
+    cursor: pointer;
+    padding: 0.7rem 0;
+}
+
+.filtro__select:focus {
+    border-color: var(--color01); /* Cor de destaque no foco */
+    outline: none;
+}
 /* Galeria */
 .galeria {
     display: grid;
@@ -64,41 +95,126 @@ body{
 }
 
 .galeria__item {
+    padding: 1rem;
     background-color:var(--color06);
-    border: 1px solid #ccc;
+    border: 0.2rem solid var(--color06);
     overflow: hidden;
     border-radius: 3rem;
+    text-align: center;
 }
-
-.galeria__link {
-    display: block;
+.galeria__topo{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 1rem;
 }
-
-.galeria__imagem {
+.galeria__imagem-perfil {
+    border-radius: 1000%;
+    margin-right: 1rem;
+    height: 8rem;
+}
+.galeria__imagem-perfil img{
+    object-fit: cover;
+}
+.galeria__info {
+    text-align: left;
     width: 100%;
-    height: auto;
-    display: block;
-    transition: border-color 0.2s;
 }
 
-.galeria__item:hover .galeria__imagem {
-    border-color: #777;
+.galeria__status{
+    background-color: var(--color03);
+    padding: 0.1rem 0;
+    font-size: 1.6rem;
+    text-align: center;
+    margin-bottom: 0.3rem;
+    border-radius: 1rem;
+    font-weight: bold;
+}
+
+.galeria__tipo{
+    font-size: 1.5rem;
+    color: var(--color01);
+    padding: 0.2rem 0;
+    margin: 0.4rem;
+    border-bottom: 2px solid var(--color03);
+    font-weight: bold;
+}
+.galeria__localizacao {
+    font-size: 1.5rem;
+    color: var(--color01);
+    padding: 0.1rem 0;
+    margin: 0.4rem;
 }
 
 .galeria__descricao {
-    padding: 15px;
-    text-align: center;
+    font-size: 1.5rem;
+    background-color: #eeeeee38;
+    color: var(--color01);
+    border-radius: 1rem;
+    margin-top: 1.5rem; 
+    margin-bottom: 2rem;
+    line-height: 1.5; 
+    overflow-wrap: break-word; 
+    
+    overflow: hidden; 
+    text-overflow: ellipsis; 
+    display: -webkit-box; 
+    -webkit-line-clamp: 3; /* Quantidade linhas */
+    -webkit-box-orient: vertical; 
 }
 
+.galeria__botao-encerrar {
+    background-color: transparent;
+    color: var(--color05);
+    border: 0.1rem solid var(--color05);
+    padding: 0.7rem 1.5rem;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s ease-in-out;
+    position: relative;
+    overflow: hidden;
+}
+
+.galeria__botao-encerrar:hover {
+    background-color: var(--color05);
+    color: var(--color01);
+    border: 0.1rem solid var(--color05);
+}
+
+.galeria__botao-Mais{
+    background-color: var(--color03);
+    color: var(--color02);
+    border: 0.1rem solid var(--color03);
+    padding: 0.7rem 1.5rem;
+    border-radius: 1.5rem;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.3s, transform 0.2s ease-in-out;
+    position: relative;
+    overflow: hidden;
+    margin: 0 1rem;
+}
+.galeria__botao-Mais:hover{
+    background-color: transparent;
+    color: var(--color01);
+    border: 0.1rem solid var(--color03);
+}
 /* Estilos padrão para telas menores que 900px */
 .galeria {
     grid-template-columns: 1fr; /* Uma coluna por padrão */
 }
-
 /* Estilos para telas maiores que 900px */
 @media (min-width: 900px) {
     .galeria {
+        
         grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Ajuste para telas maiores */
+    }
+    /* Estilos para a barra de filtro */
+    .filtro {
+
+        margin: 0.5rem 5rem;
     }
 }
 
@@ -107,5 +223,11 @@ body{
     .galeria {
         grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Ajuste para telas ainda maiores */
     }
+
+        /* Estilos para a barra de filtro */
+        .filtro {
+
+            margin: 0.5rem 5rem;
+        }
 }
 
