Quase terminando a Estilização

--- a/templates/RF005-encamSolic.html
+++ b/templates/RF005-encamSolic.html
@@ -79,9 +79,11 @@
                     
                     <div class="form_btn-emergencia">
                         <div class="form_btn-emergencia__titulo">Prioridade:</div>
-                        <div class="option urgency" data-urgency="baixa">Baixa Urgência</div>
-                        <div class="option urgency" data-urgency="media">Média Urgência</div>
-                        <div class="option urgency" data-urgency="alta">Alta Urgência</div>
+                        <div class="botoes">
+                            <div class="option urgency" data-urgency="baixa">Baixa Urgência</div>
+                            <div class="option urgency" data-urgency="media">Média Urgência</div>
+                            <div class="option urgency" data-urgency="alta">Alta Urgência</div>
+                        </div>
                         <button href="/" type="submit">Enviar Solicitação</button>
                     </div>
 
