--- a/static/CSS/RF005-encamSolic.css
+++ b/static/CSS/RF005-encamSolic.css
@@ -1,3 +1,4 @@
+
 /* Estilo da Topo da Tela (nome do Usuario e data */
 header{
   width: 100vw;
@@ -62,6 +63,7 @@ nav button{
   background: none;
   font-weight: 700;
   transition-duration: 0.2s;
+  color: var(--color02);
 }
 
 nav button i{
@@ -84,7 +86,7 @@ main{
 
 .caixa-option {
     padding: 8px;
-    margin: 2rem 3rem 2rem 3rem;
+    margin: 1rem 3rem 2rem 3rem;
     cursor: pointer;
     display: flex;
     align-items: center;
@@ -144,9 +146,58 @@ main{
 
 .form_btn-emergencia{
   width: 100vw;
-  height: 10vh;
+  height: 18vh;
   position: fixed;
   bottom: 0;
   z-index: 1;
   background-color: var(--color06);
+  border-top-left-radius: 4rem ;
+  border-top-right-radius: 4rem;
+  color: var(--color01);
+  
+}
+
+.form_btn-emergencia__titulo{
+  margin: 1rem 0rem 0rem 3rem;
+  font-size: 1.2rem;
+}
+
+.botoes{
+  display: flex;
+  width: 100vw;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: 1rem;
+
+}
+
+.urgency{
+    padding: 1rem;
+    border: solid 2px var(--color01);
+    border-radius: 1rem;
+}
+
+.urgency.selected{
+  color: var(--color03);
+}
+
+/* Estilo do botão 'Enviar Solicitação' */
+button{
+    width: 20rem;
+    padding: 0.9rem;
+    text-align: center;
+    border-radius: 50px;
+    font-size: 1.4rem;
+    font-weight: bold;
+    cursor: pointer;
+    background-color: var(--color03); 
+    color: var(--color01); 
+    margin: 1rem 10rem 0rem 10rem;
+    transition-duration: 0.2s;
+}
+
+button:hover{
+      background: none;
+      border: 1px solid var(--color03);
+      color: var(--color03);
 }
