Finalização da união entre Rf003 e RF004

--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -68,9 +68,9 @@
                         </header>
                         <div class="card__body">
                             <!-- Serviço descrito no card -->
-                            <p class="card__service" aria-label="Serviço">{{campo_funcao}}</p>
+                            <p class="card__service" aria-label="Serviço">{{x[5]}}</p>
                             <!-- Pessoa que fez a solicitação -->
-                            <p class="card__responsavel" aria-label="Responsável pela solicitação">{{campo_nome}}</p>
+                            <p class="card__responsavel" aria-label="Responsável pela solicitação">{{x[4]}}</p>
                             <!-- Linha horizontal para separação visual -->
                             <hr class="card__linha" aria-hidden="true">
                             <!-- Descrição do serviço -->
