--- a/templates/RF004-ADMrecbSolic.html
+++ b/templates/RF004-ADMrecbSolic.html
@@ -28,9 +28,9 @@
             <img src="/static/IMG/image 17exImgRogerio.png" alt="Imagem de Perfil de Claudio Silva" class="header__user-image">
             <div class="header__user-details">
                 <!-- Nome do usuário -->
-                <h2 class="header__user-name">Claudio Silva</h2>
+                <h2 class="header__user-name">{{campo_nome}}</h2>
                 <!-- Cargo do usuário -->
-                <p class="header__user-position">Chefe da manutenção</p>
+                <p class="header__user-position">{{campo_funcao}}</p>
             </div>
         </section>
     </header>
